--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 
     <script>
         const users = { "client1": "password123", "client2": "securepass" }; // Simple authentication
-        const adminEmail = "your-email@example.com"; // Set your email address here
+        const adminEmail = "sshclhung@hotmail.com"; // Set your email address here
 
         function sendEmail(subject, body) {
             let mailtoLink = `mailto:${adminEmail}?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
